--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,10 @@ baseURL = 'https://yipeng1030.github.io/my-blog/'
 languageCode = 'zh-cn'
 title = 'My Blogs'
 theme = 'hugo-PaperMod'
+
+params:
+  homeInfoParams:
+    Title: Hi there wave
+    buttons:
+      - name: Github
+        url: "https://github.com/yipeng1030"
